Remove county specific feature flag for blank status resubmission
[#182087322]